tests/src/frontend/syntax/invalid/named_tuple.sk
fun main(): String {
  t: (x: Int, Int) = (0, 1);
  "fail"
}
